--- a/audits/index.html
+++ b/audits/index.html
@@ -158,7 +158,8 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="audits"><a class="header" href="#audits">Audits</a></h1>
+                        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
+<h1 id="audits"><a class="header" href="#audits">Audits</a></h1>
 <p>A list of audits we have completed so far:</p>
 <div class="table-wrapper"><table><thead><tr><th>Time</th><th>Auditor</th><th>Subject</th><th>Links</th></tr></thead><tbody>
 <tr><td>2025-04-07</td><td><a href="https://x.com/zellic_io">Zellic</a></td><td><a href="https://x.com/hyperlane">Hyperlane</a></td><td><a href="./20250407-zellic-hyperlane.pdf">report</a></td></tr>
