--- a/index.html
+++ b/index.html
@@ -158,7 +158,8 @@
 
                 <div id="content" class="content">
                     <main>
-                        <p><img src="wall_1.jpg" alt="banner" /></p>
+                        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
+<p><img src="wall_1.jpg" alt="banner" /></p>
 <p>Welcome, stranger!</p>
 <p>This is <strong>the Dango Book</strong>, everything about one place for all DeFi.</p>
 <blockquote>
