--- a/networks/dev-2.html
+++ b/networks/dev-2.html
@@ -158,7 +158,8 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="dev-2"><a class="header" href="#dev-2">dev-2</a></h1>
+                        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
+<h1 id="dev-2"><a class="header" href="#dev-2">dev-2</a></h1>
 <ul>
 <li>Genesis time: 12 October 2024</li>
 <li>Commit: <a href="https://github.com/left-curve/left-curve/tree/1f62285"><code>1f62285</code></a></li>
