--- a/networks/dev-4.html
+++ b/networks/dev-4.html
@@ -158,7 +158,8 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="dev-4"><a class="header" href="#dev-4">dev-4</a></h1>
+                        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
+<h1 id="dev-4"><a class="header" href="#dev-4">dev-4</a></h1>
 <p>We're no longer using Docker for devnets starting from this one.</p>
 <ul>
 <li>Genesis time: 14 January 2025</li>
