--- a/networks/dev-5.html
+++ b/networks/dev-5.html
@@ -158,7 +158,8 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="dev-5"><a class="header" href="#dev-5">dev-5</a></h1>
+                        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
+<h1 id="dev-5"><a class="header" href="#dev-5">dev-5</a></h1>
 <ul>
 <li>Genesis time: 25 February 2025</li>
 <li>Dango version: <a href="https://github.com/left-curve/left-curve/tree/75a9966"><code>75a9966</code></a></li>
