--- a/notes/extension-traits.html
+++ b/notes/extension-traits.html
@@ -158,7 +158,8 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="extension-traits"><a class="header" href="#extension-traits">Extension traits</a></h1>
+                        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
+<h1 id="extension-traits"><a class="header" href="#extension-traits">Extension traits</a></h1>
 <p>In Grug, we make use of the <strong>extension trait</strong> pattern, which is well explained by <a href="https://youtu.be/qrf52BVaZM8">this video</a>.</p>
 <p>To put it simply, a Rust library has two options on how to ship a functionality: <em>to ship a function</em>, or <em>to ship a trait</em>.</p>
 <p>For instance, suppose our library needs to ship the functionality of converting Rust values to strings.</p>
