--- a/notes/generate-dependency-graph.html
+++ b/notes/generate-dependency-graph.html
@@ -158,7 +158,8 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="generate-dependency-graph"><a class="header" href="#generate-dependency-graph">Generate dependency graph</a></h1>
+                        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
+<h1 id="generate-dependency-graph"><a class="header" href="#generate-dependency-graph">Generate dependency graph</a></h1>
 <div align="center">
   <img src="dependency.svg">
 </div>
