--- a/notes/indexed-map.html
+++ b/notes/indexed-map.html
@@ -158,7 +158,8 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="indexed-map"><a class="header" href="#indexed-map">Indexed map</a></h1>
+                        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
+<h1 id="indexed-map"><a class="header" href="#indexed-map">Indexed map</a></h1>
 <p>An <code>IndexedMap</code> is a map where each record is indexed not only by the primary key, but also by one or more other indexes.</p>
 <p>For example, consider limit orders in an oracle-based perpetual futures protocol. For simplicity, let's just think about <em>buy</em> orders:</p>
 <pre><pre class="playground"><code class="language-rust edition2021"><span class="boring">#![allow(unused)]
