--- a/notes/math.html
+++ b/notes/math.html
@@ -158,7 +158,8 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="math"><a class="header" href="#math">Math</a></h1>
+                        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
+<h1 id="math"><a class="header" href="#math">Math</a></h1>
 <p>Rust's primitive number types are insufficient for smart contract use cases, for three main reasons:</p>
 <ol>
 <li>
