--- a/notes/transaction-lifecycle.html
+++ b/notes/transaction-lifecycle.html
@@ -158,7 +158,8 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="transaction-lifecycle"><a class="header" href="#transaction-lifecycle">Transaction lifecycle</a></h1>
+                        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
+<h1 id="transaction-lifecycle"><a class="header" href="#transaction-lifecycle">Transaction lifecycle</a></h1>
 <p>A Grug transaction (tx) is defined by the following struct:</p>
 <pre><pre class="playground"><code class="language-rust edition2021"><span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
