--- a/networks/dev-1.html
+++ b/networks/dev-1.html
@@ -158,7 +158,8 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="dev-1"><a class="header" href="#dev-1">dev-1</a></h1>
+                        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
+<h1 id="dev-1"><a class="header" href="#dev-1">dev-1</a></h1>
 <ul>
 <li>Genesis time: 6 October 2024</li>
 <li>Commit: <a href="https://github.com/left-curve/left-curve/tree/e450584"><code>e450584</code></a></li>
