--- a/networks/index.html
+++ b/networks/index.html
@@ -158,7 +158,8 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="networks"><a class="header" href="#networks">Networks</a></h1>
+                        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
+<h1 id="networks"><a class="header" href="#networks">Networks</a></h1>
 <p>Dango mainnet, testnets, and devnets.</p>
 <h2 id="how-to-spin-up-a-devnet"><a class="header" href="#how-to-spin-up-a-devnet">How to spin up a devnet</a></h2>
 <h3 id="prerequisites"><a class="header" href="#prerequisites">Prerequisites</a></h3>
