fix: remove blue color for scrollbar

--- a/ui/portal/web/public/index.html
+++ b/ui/portal/web/public/index.html
@@ -14,7 +14,7 @@
   <title>Dango PortalApp</title>
 </head>
 
-<body class="scrollbar-thin scrollbar-thumb-blue-500 scrollbar-thumb-rounded-full scrollbar-track-blue-100">
+<body>
   <div id="root"></div>
 </body>
 
