feat: ui support dynamic config

--- a/ui/portal/web/public/index.html
+++ b/ui/portal/web/public/index.html
@@ -10,6 +10,7 @@
   <link rel="icon" sizes="16x16" href="/favicon.svg" />
   <link rel="manifest" href="/manifest.json">
   <meta name="theme-color" content="#000">
+  <script src="/static/js/config.js"></script>
 </head>
 
 <body>
