--- a/ui/portal/web/public/index.html
+++ b/ui/portal/web/public/index.html
@@ -10,6 +10,18 @@
   <link rel="icon" sizes="16x16" href="/favicon.svg" />
   <link rel="manifest" href="/manifest.json">
   <meta name="theme-color" content="#000">
+  <meta name="description" content="A DeFi hub with novel leverage capabilities and a true next-gen user experience">
+  <meta property="og:title" content="Dango">
+  <meta property="og:description" content="A DeFi hub with novel leverage capabilities and a true next-gen user experience">
+  <meta property="og:image" content="/og.png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Dango">
+  <meta name="twitter:description" content="A DeFi hub with novel leverage capabilities and a true next-gen user experience">
+  <meta name="twitter:image" content="/og.png">
+  <meta name="twitter:image:width" content="1200">
+  <meta name="twitter:image:height" content="630">
   <script src="/static/js/config.js"></script>
 </head>
 
